# AI-Powered-Contract-Review-Risk-Analyzer

./: .env.example  .gitignore  ContractIQ_SRS.docx  Dockerfile  README.md  docker-compose.yml  mcp.config.example.json  pyproject.toml  requirements.txt
contractiq/: __init__.py  service.py
contractiq/agents/: __init__.py  clause_extractor.py  negotiator.py  orchestrator.py  plain_english.py  risk_scorer.py
contractiq/api/: __init__.py  main.py
contractiq/api/routes/: __init__.py  analyze.py  chat.py  export.py  upload.py
contractiq/auth/: __init__.py  dependencies.py  models.py  routes.py  security.py  service.py  store.py
contractiq/core/: __init__.py  config.py  embeddings.py  llm.py  logging.py  models.py  taxonomy.py  vector_store.py
contractiq/ingestion/: __init__.py  chunker.py  embedder.py  parser.py
contractiq/mcp_server/: __init__.py  router.py  schemas.py  server.py
contractiq/rag/: __init__.py  qa_agent.py  retriever.py
contractiq/report/: __init__.py  generator.py
evals/: eval_retrieval.ipynb  eval_retrieval.py
evals/test_contracts/: labels.json  msa_globex.txt  nda_acme.txt
frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: auth-screen.tsx  footer.tsx  theme-toggle.tsx  user-management.tsx  user-menu.tsx
frontend/lib/: api.ts  auth.tsx
scripts/: smoke_test.py
tests/: conftest.py  fakes.py  test_api.py  test_auth.py  test_ingestion.py  test_mcp_tools.py  test_pipeline.py  test_rag.py
(+14 files in other folders)
